Chore - Minor fix of text alignment and styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 body {
   font-family : 'Roboto', 'Helvetica', 'Arial', sans-serif;
-  font-weight: 300;
+  font-weight: 100;
   color: #222;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 300;
+  font-weight: 100;
 }
 
 .container {
